Fix N+1 query performance issues and Java version compatibility
- Added @OneToMany relationships in ContactEntity and AccountEntity with SUBSELECT fetch mode
- Refactored ContactService and AccountService to use entity collections directly
- Fixed Java 21 compatibility issues (getFirst/getLast) to Java 17
- Updated pom.xml to use Java 17 consistently

Co-authored-by: bigmwaj <11653412+bigmwaj@users.noreply.github.com>